--- a/_posts/2023-10-01-GBDT-1.markdown
+++ b/_posts/2023-10-01-GBDT-1.markdown
@@ -25,17 +25,25 @@ mathjax: yes
 ### 决策树模型与集成学习
 
 这里不再赘述决策树模型的基本原理，只需将决策树视为如下数学模型
-$$ f(x) = \sum_{m=1}^{n}w_{m}I_{\{x\in R_{m}\}}$$
+$$ 
+f(x) = \sum_{m=1}^{n}w_{m}I_{\{x\in R_{m}\}}
+$$
 其中$x$是样本数据，$x\in R^{d}$，$n$为决策树的叶节点数目，$I_{\{x\in R_{m}\}}$为指示函数，$x$落在$R^{d}$中的区域$R_{m}$时为1，否则为0，区域$R_{m}$两两不交，$w_{m}\in R$。
 
 对回归树，需要确定划分$R_{m}$和权重$w_{m}$，使得$loss(y_{true},f(x))$最小。对二分类，我们只需将输出的$f(x)$通过logit函数转化为概率值，即
-$$logit(x) = \frac{1}{1+\exp(-f(x))}$$
+$$
+logit(x) = \frac{1}{1+\exp(-f(x))}
+$$
 对多分类任务，利用"one vs all"准则可将其分解为多个二分类任务。因此我们仅讨论回归树情形。
 
 对集成学习，简单讲就是使用多个弱学习器去训练一个强学习器的结果。例如可以训练多颗决策树，每棵树预测取平均作为最终输出。这种做法直觉上看是保证了结果的鲁棒性。假设每棵树的训练误差$e_{i}$独立同分布，有
-$$E[e] = \mu, Var(e) = \sigma^{2}$$
+$$
+E[e] = \mu, Var(e) = \sigma^{2}
+$$
 当我们将结果取均值时，我们有
-$$ E[\frac{1}{n}\sum_{i=1}^{n}e_{i}] =\frac{1}{n}\sum_{i=1}^{n}E[e_{i}] =  \mu$$
+$$ 
+E[\frac{1}{n}\sum_{i=1}^{n}e_{i}] =\frac{1}{n}\sum_{i=1}^{n}E[e_{i}] =  \mu
+$$
 $$ Var(\frac{1}{n}\sum_{i=1}^{n}e_{i}) = \frac{1}{n^{2}}\sum_{i=1}^{n}Var(e_{i}) = \frac{1}{n}\sigma^{2}$$
 
 可以看到这种简单的均值集成是控制了预测误差的方差，并没有减少误差期望$\mu$。
