--- a/_posts/2024-02-19-SATURN论文解读.markdown
+++ b/_posts/2024-02-19-SATURN论文解读.markdown
@@ -4,7 +4,7 @@ read_time: true
 show_date: true
 title:  SATURN论文解读
 date:   2024-02-19 13:40:20 -0600
-header-img: img/20240128/茨木童子.jpg
+header-img: img/20240219/刚铎.webp
 tags: [计算生物学,论文阅读,scRNA-seq]
 author: 孙睿
 mathjax: yes
