--- a/_posts/2024-03-30-scGPT论文解读.markdown
+++ b/_posts/2024-03-30-scGPT论文解读.markdown
@@ -272,4 +272,4 @@ unk 代表未知的基因集合（待预测）。
 
 最后就是个人对单细胞领域大模型的一点看法，从我目前了解的一些工作，scBERT、scGPT、GeneFormer、Cell2Sentece等等，我并没有感觉到和NLP中LLM带来的同等级别的冲击。NLP中所有任务都被大一统成文本生成，在单细胞中这样的大一统任务看起来遥遥无期。总之，我不认为目前的这些单细胞大模型具备颠覆领域的能力，和之前的算法工作没有什么本质的区别。
 
-当然，scGPT的工程量确实很大，整理的数据集也足够丰富，我个人还是很尊重这个工作本身的前面提到的不看好仅是个人对单细胞大模型发展的一家之言，也许后面就被打脸了呢。
+当然，scGPT的工程量确实很大，整理的数据集也足够丰富，我个人还是很尊重这个工作本身的。前面提到的不看好仅是个人对单细胞大模型发展的一家之言，也许后面就被打脸了呢。
