--- a/_posts/2024-04-19-单细胞数据整合中样本不平衡的影响.markdown
+++ b/_posts/2024-04-19-单细胞数据整合中样本不平衡的影响.markdown
@@ -2,7 +2,7 @@
 layout: post
 read_time: true
 show_date: true
-title:  SATURN论文解读
+title:  样本不平衡对单细胞数据整合的影响
 date:   2024-04-19 13:40:20 -0600
 header-img: img/20240219/刚铎.webp
 tags: [计算生物学,论文阅读,scRNA-seq]
