--- a/_posts/2024-07-14-部分工作总结.markdown
+++ b/_posts/2024-07-14-部分工作总结.markdown
@@ -179,9 +179,9 @@ catalog: true
 
 对于整合的数据，这里选择对scRNA-seq数据进行整合。没有做多组学数据整合的原因是，市面上容易跑通的多组学数据整合的工作并不是特别多，我印象中发表在大子刊上、能够处理多样本多组学的整合方法可能就是totalvi, glue。
 
-权衡下来决定不要投入大量时间在一个收益未知的方法上，scRNA-seq数据的整合方法一天就能尝试好多种，丢弃atac-seq数据固然损失了部分信息，但能更快的推进工作。
+权衡下来决定不要投入大量时间在一个收益未知的方法上，scRNA-seq数据的整合方法一天就能尝试好多中，而多组学整合我可能要干半个月并且结果位置。丢弃atac-seq数据固然损失了部分信息，但能更快的推进工作。
 
-确定做scRNA-seq数据整合后，我选择从对scanpy生态友好的方法种进行选择，尝试过的方法包括mofa+, harmony, scanorama, mnn, bbknn, scvi，meta-neighbor。具体的使用体验以后会讲。最后用的是harmony。
+确定做scRNA-seq数据整合后，我选择从对scanpy生态友好的方法中进行选择，尝试过的方法包括mofa+, harmony, scanorama, mnn, bbknn, scvi，meta-neighbor。具体的使用体验以后会讲。最后用的是harmony。
 
 最关键的一点是要确定整合到什么程度，这个是要和生物学先验结合的。具体来说就是，是要让五个物种对齐（聚类后每一个cluster中都包含5个物种）还是让八个脑区对齐（聚类后每个cluster中都包含8个脑区）还是这40个样本对齐（每个cluster中包含这40个样本）。这个先验对于评估整合效果的好坏是至关重要的，前期因为缺乏先验，做了大量的失败的尝试。获取这类先验的方法是看文献，看下权威机构的类似工作是怎么整合的。后期我是参考的Allen Institute for Brain Science 在2023年发表的工作[<sup>1</sup>](#refer-anchor-1)。
 
@@ -247,7 +247,7 @@ catalog: true
 
 使用自动化注释的方法确实可以回避人工标注的两个难点，但是同样有新的问题，一方面仍旧需要提供可解释的注释依据，另一方面则是无法有效的迁移。后面会详细解释这一点。
 
-我最终选择的是人工标注。对于marker gene，我使用的是CellMarker 数据库加文献参考的方式扩充marker gene list。对于判定规则，除了常规的特异性表，我也参考了2023年MIT的一篇工作[<sup>2</sup>](#refer-anchor-2)，如下图所示，可以看到研究人员在神经细胞亚型的注释上引入了且或的逻辑判定规则，这类判定对前面提到的多种marker gene的高表达的情形提供了解决的方案。
+我最终选择的是人工标注。对于marker gene，我使用的是CellMarker 数据库加文献参考的方式扩充marker gene list。对于判定规则，除了常规的特异性表达，我也参考了2023年MIT的一篇工作[<sup>2</sup>](#refer-anchor-2)，如下图所示，可以看到研究人员在神经细胞亚型的注释上引入了且或的逻辑判定规则，这类判定对前面提到的多种marker gene的高表达的情形提供了解决的方案。
 
 <center>
     <img style="border-radius: 0.3125em;
@@ -352,35 +352,35 @@ catalog: true
 
     而对齐能提供什么？在我看来真的没有很多，它可以帮你画一张漂亮的UMAP，告诉大家数据长这样。之后帮助你做细胞注释，在这个公共的细胞嵌入下，不同物种的相同细胞被聚合到一个cluster里，根据marker gene完成全样本的注释，不用一个样本一个样本单独的做过去。然后就没有了，因为对齐或者直接根据细胞间的knn图或者将细胞做了一个表示学习，两者都没有什么直接的生物解释性。所以真的做不了啥。
 
-    我个人认为，对齐就是承担一个提供宏观的数据分布和细胞注释的功能。这两步能很好的做完，对齐就已经发挥完其全部功能了。接下来重要的是差异比对，比如说同样是神经元，回声非回声的差异基因有哪些，调控网络有没有差异。甚至说，如果不需要数据可视化的化，不做对齐也无所谓，单个样本做注释、推断网络、推断细胞互作，之后做差异分析即可。
+    我个人认为，对齐就是承担一个提供宏观的数据分布和细胞注释的功能。这两步能很好的做完，对齐就已经发挥完其全部功能了。接下来重要的是差异比对，比如说同样是神经元，回声非回声的差异基因有哪些，调控网络有没有差异。甚至说，如果不需要数据可视化的话，不做对齐也无所谓，单个样本做注释、推断网络、推断细胞互作，之后做差异分析即可。
 
-    这一阶段我也暴露了一些其他的问题，例如夸大算法的影响。以对齐为例，harmony这种比较老的方法经常被一些新方法吊锤，这种偏见导致我对比整合方法时，看到Harmony表现较差就直接归因于方法落后而不是自己调参失败或者对齐的因子不对。结合我最后使用harmony对齐的效果来看，在选好对其的因子为物种时，harmony在5个物种的对齐上做的很好，在2个物种的对齐上表现较差（如下图所示），但是如果调整惩罚系数或者进行多步harmony，其在2个物种的对齐上也表现不错。因此不要过分迷信论文中算法的性能，结合数据好好调参更有效。
+    这一阶段我也暴露了一些其他的问题，例如夸大算法的影响。以对齐为例，harmony这种比较老的方法经常被一些新方法吊锤，这种偏见导致我对比整合方法时，看到Harmony表现较差就直接归因于方法落后而不是自己调参失败或者对齐的因子不对。结合我最后使用harmony对齐的效果来看，在选好对齐的因子为物种时，harmony在5个物种的对齐上做的很好，在2个物种的对齐上表现较差（如下图所示），但是如果调整惩罚系数或者进行多步harmony，其在2个物种的对齐上也表现不错。因此不要过分迷信论文中算法的性能，结合数据好好调参更有效。
 
-<center>
-    <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="/img/20240714/Picture6.png" width = "80%" alt=""/>
-    <br>
-    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;">
-    harmony 在两个物种的整合任务上，使用默认参数表现较差
-    </div>
-</center>
+  <center>
+      <img style="border-radius: 0.3125em;
+      box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+      src="/img/20240714/Picture6.png" width = "80%" alt=""/>
+      <br>
+      <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+      display: inline-block;
+      color: #999;
+      padding: 2px;">
+      harmony 在两个物种的整合任务上，使用默认参数表现较差
+      </div>
+  </center>
 
-<center>
-    <img style="border-radius: 0.3125em;
-    box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
-    src="/img/20240714/image-6.png" width = "100%" alt=""/>
-    <br>
-    <div style="color:orange; border-bottom: 1px solid #d9d9d9;
-    display: inline-block;
-    color: #999;
-    padding: 2px;">
-    使用多步harmony能够得到更好的对齐
-    </div>
-</center>
+  <center>
+      <img style="border-radius: 0.3125em;
+      box-shadow: 0 2px 4px 0 rgba(34,36,38,.12),0 2px 10px 0 rgba(34,36,38,.08);" 
+      src="/img/20240714/image-6.png" width = "100%" alt=""/>
+      <br>
+      <div style="color:orange; border-bottom: 1px solid #d9d9d9;
+      display: inline-block;
+      color: #999;
+      padding: 2px;">
+      使用多步harmony能够得到更好的对齐
+      </div>
+  </center>
 
 3. 2023.12-2024.03 
 
@@ -472,7 +472,7 @@ catalog: true
 
 ![alt text](/img/20240714/image-4.png)
 
-其中彩色的线代表每个细胞的atac信息，可以看到这些细胞在20000,40000,60000,80000这四个位点附近由片段被切割(value=1)。但由于每个细胞切除的片段大概率不一致，所以距离atac-seq数据分析常见的cell-peak矩阵依旧存在一定的距离。这时需要一个call-peak的过程，即将这些片段富集的区域做为一个peak，图中的黑色折线是一个不严谨的示意图，我们可以根据黑色折线中高于阈值的片段确定peak，之后统计每个细胞在这个peak区间里的片段数目。
+其中彩色的线代表每个细胞的atac信息，可以看到这些细胞在20000,40000,60000,80000这四个位点附近有片段被切割(value=1)。但由于每个细胞切除的片段大概率不一致，所以距离atac-seq数据分析常见的cell-peak矩阵依旧存在一定的距离。这时需要一个call-peak的过程，即将这些片段富集的区域做为一个peak，图中的黑色折线是一个不严谨的示意图，我们可以根据黑色折线中高于阈值的片段确定peak，之后统计每个细胞在这个peak区间里的片段数目。
 
 注意，虽然每个细胞中得到的片段数目至多为1，但经过call-peak后，peak count的值是一个大于等于1的整数，示意图如下：
 
@@ -496,13 +496,13 @@ catalog: true
 
 #### 调控网络推断
 
-基因调控网络(GRN)通常有两种类型，根据网络中边的关系，可以分为TF-TG网络 和 TF-RE-TG网络这两类。其结构应当是一个稀疏的有向图，因为调控下游基因的转录因子，不太可能是全部的几万个基因。
+基因调控网络(GRN)通常有两种类型，根据网络中边的关系，可以分为TF-TG网络 和 TF-RE-TG网络这两类。其结构应当是一个稀疏的有向图，稀疏性是因为调控下游基因的转录因子，不太可能是全部的几万个基因。
 
 比起scRNA-seq数据，ATAC-seq数据给我们提供了peak(RE,调控元件)的信息，这会帮助我们简历RE-TG 和 TF-RE之间的关系，因此可以通过ATAC-seq数据更好的建立符合调控机制的TF-TG关系。
 
-对于调控网络推断，我选择的是celloracle方法[<sup>4</sup>](#refer-anchor-4) ,主要原因是原理简单，流程容易跑通。其主要步骤是概括如下：
+对于调控网络推断，我选择的是celloracle方法[<sup>4</sup>](#refer-anchor-4) ,主要原因是原理简单，流程容易跑通。其主要步骤概括如下：
 
-1. 筛选peak-tg 之间关系，这一步主要目的是降维和保留有意义的调控关系。通常根据两个阈值来筛选，第一是距离，不在同一条染色体上的peak和tg、以及距离过远的peak和tf,大概率无调控关系删掉。peak和tg之间相关性过低的，大概率无调控关系，删掉。
+1. 筛选peak-tg 之间关系，这一步主要目的是降维和保留有意义的调控关系。通常根据两个阈值来筛选，第一是距离，不在同一条染色体上的peak和tg、以及距离过远的peak和tf,大概率无调控关系，删掉。peak和tg之间相关性过低的，大概率无调控关系，删掉。
 
     怎样构建peak和tg之间的相关性呢？可以直接计算peak和tg之间的相关系数，也可以计算peak和该基因转录起始位点周边peak之间的相关系数，有专门针对peak相关性的计算工具cirero[<sup>5</sup>](#refer-anchor-5),得到peak-peak之间的相关性矩阵，再根据peak_annotation文件得到peak-gene之间的相关性。
     
