--- a/_posts/2024-07-14-部分工作总结.markdown
+++ b/_posts/2024-07-14-部分工作总结.markdown
@@ -338,7 +338,7 @@ catalog: true
 
 #### 曲折的试错经过
 
-这里按照时间记录自己的试错经过。虽然这些是失败的结果，但也一定程度上显示了当前分析工具上存在的缺陷。 
+这里按照时间记录自己的试错经过。虽然这些是失败的结果，但同时也是教训，并且一定程度上显示了当前分析工具上存在的缺陷。 
 
 1. 2023.09-2023.10 
    
