--- a/_posts/2024-05-05-360大模型实习.markdown
+++ b/_posts/2024-05-05-360大模型实习.markdown
@@ -173,9 +173,9 @@ opencompass的math评测存在解析问题：
 
 职业发展的话，体验了互联网公司的氛围，开始考虑是否要强行进入这样一个高薪高强度但是和自己不是百分百匹配的行业。不是完全对口意味着自己读博期间要付出额外的努力去学习这个岗位的知识，积累项目经验或者实习经历。同时还要和对口专业的同学去竞争，进入岗位后一段时间肯定还是积累学习的过程，不太可能主导一个项目。而如果后面选择生信相关的工作，可能收入上会低一些，但是能更好的发挥自己的研究专长，主导项目的概率会更大。所以后面打算在科研上再努力一把，工作时尝试一下跨国药企的生信研究岗位。
 
-还有一些人际交往上的收获。刚进入实习是有点落差的，毕竟在课题组内自己是经验丰富的师兄，而在实习中变成了纯小白，几乎各个方面都要去学习请教。这个过程中，一方面要自己抓紧时间学习补上这些经验，但另一方面也要积极主动地去请教同事，自己在请教这里做的不是很好，至少前期时如果多多请教同事的话，基础知识的学习应该会更快，同时也能更快的推进工作，也许这时候离职的时候就能把论文做完了哈哈。所以后面如果再有合作或者实习的机会的话，还是要更加积极主动一些。
+还有一些工作交流上的反思。开始实习时，自己对大模型是纯小白的状态，工作中遇到的问题多去请教同事，而不是执着于自己解决，应该会更快的推进项目。自己在这一块做的并不好，交流沟通更积极一些的话，也许离职的时候就能把论文做完了哈哈。
 
-最后一点是研究上的收获，这一点光香老师教了我很多，他经常找我聊一些idea或者让我讲一些idea。感觉做AI研究者的思路和数学研究者的思路是有挺大差异的，AI的idea看起来更小更具体一点，而生信这边要讲一个更大更完整的故事。但是AI研究的有一点是很好的，那就是有Idea就赶紧做出来，做出来再看有什么问题，搞数学的在建模前就会考虑一些有的没的的问题，所以做工作就会慢不少。后面打算借鉴AI的思路去把毕业论文工作抓紧整出来，就两点：
+最后一点是研究上的收获，这一点光香老师教了我很多，他经常找我聊一些idea或者让我讲一些idea。感觉做AI研究者的思路和数学研究者的思路是有挺大差异的，很多AI研究者的idea看起来更小更具体一点，而导师这边则倾向于讲一个更大更完整的故事。但是AI研究的有一点是很好的，那就是有Idea就赶紧做出来，做出来再看有什么问题，搞数学的在建模前就会考虑一些有的没的的问题，所以做工作就会慢不少。后面打算借鉴AI的思路去把毕业论文工作抓紧整出来，就两点：
 1. 不要嫌弃想法太小，有了就赶紧做
 2. 先做出来在完善，不要还没做就想方方面面都考虑到。
 
